<resources>
    <string name="app_name">BBC News - US &amp; Canada</string>

    <string name="my_url">https://feeds.bbci.co.uk/news/world/us_and_canada/rss.xml</string>


    <string name="application_name">RSS Reader</string>


    <!-- ____________________ Nav Bar Strings _______________ -->

    <string name="nav_add_source">Add Feed Source</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_bcc">BBC News - US &amp; Canada</string>
    <string name="nav_sources">View Feed Sources</string>
    <string name="nav_about">About</string>
    <string name="nav_exit">Exit</string>
    <string name="exit_text">Thank You</string>
    <string name="nav_about_rss_reader">About RSS Reader</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <!--_______________________________________________________-->


    <string name="feed_url">Enter source url</string>
    <string name="feed_name">Enter source name</string>
    <string name="add_source">Add Source</string>
    <string name="name">Source Name : </string>
    <string name="url">Source URL : </string>

    <string-array name="categories">
        <item>BBC News - US &amp; Canada</item>
    </string-array>


    <string name="full_news">View Full News</string>


    <string name="comment">App Developed By</string>
    <string name="author">Author</string>


</resources>
